k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: junior-tracker-frontend
  namespace: junior-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: junior-tracker-frontend
  template:
    metadata:
      labels:
        app: junior-tracker-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/vladimirgolovanov/junior-tracker-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: junior-tracker-frontend
  namespace: junior-tracker
spec:
  selector:
    app: junior-tracker-frontend
  ports:
    - port: 80
      targetPort: 80
